css fix for mobile readability

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -136,6 +136,12 @@ span.smallText {
     }
 }
 
+@media only screen and (max-width: 790px) {
+    .textBox {
+        width: 80%;
+    }
+}
+
 a {
     color: inherit;
     font-weight: bold;
